WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82035
REGRESSION(
r111754
): plugins/reloadplugins-and-pages.html fails on all platforms
https://bugs.webkit.org/show_bug.cgi?id=82035
Summary
REGRESSION(r111754): plugins/reloadplugins-and-pages.html fails on all platforms
Ryosuke Niwa
Reported
2012-03-23 01:46:58 PDT
REGRESSION(
r111754
): plugins/reloadplugins-and-pages.html fails on all platforms
Attachments
Patch
(12.63 KB, patch)
2012-03-23 01:48 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2012-03-23 01:48:56 PDT
Created
attachment 133444
[details]
Patch
WebKit Review Bot
Comment 2
2012-03-23 01:51:43 PDT
Comment on
attachment 133444
[details]
Patch Rejecting
attachment 133444
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12116555
Ryosuke Niwa
Comment 3
2012-03-23 02:04:13 PDT
Comment on
attachment 133444
[details]
Patch Clearing flags on attachment: 133444 Committed
r111839
: <
http://trac.webkit.org/changeset/111839
>
Ryosuke Niwa
Comment 4
2012-03-23 02:04:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug