REGRESSION(r111754): plugins/reloadplugins-and-pages.html fails on all platforms https://bugs.webkit.org/show_bug.cgi?id=82035

.:

* Source/autotools/symbols.filter:

Source/WebCore:

Rollout r111754 since it caused a test to fail and the test added by the patch
is failing on Mac WebKit 2.

* WebCore.exp.in:
* html/HTMLPlugInElement.cpp:
(WebCore::HTMLPlugInElement::detach):
(WebCore):
(WebCore::HTMLPlugInElement::removedFromDocument):
* html/HTMLPlugInElement.h:
(HTMLPlugInElement):
* testing/Internals.cpp:
* testing/Internals.h:
(Internals):
* testing/Internals.idl:

Source/WebKit2:

* win/WebKit2.def:
* win/WebKit2CFLite.def:

LayoutTests:

* plugins/netscape-dom-access-and-reload-expected.txt: Removed.
* plugins/netscape-dom-access-and-reload.html: Removed.


Canonical link: https://commits.webkit.org/99325@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111839 268f45cc-cd09-0410-ab3c-d52691b4dbfc